--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import 'tailwindcss';
+
+html {
+	font-family: 'Inter', sans-serif;
+}
+
+h1 {
+}
+
+h2 {
+}
+
+h3 {
+}
+
+p {
+}
+
+.title {
+	@apply text-4xl font-semibold text-shadow-sm/30 text-shadow-zinc-200;
+}
