--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,16 @@ html {
 	font-family: 'Inter', sans-serif;
 }
 
+html, body {
+	height: 100%;
+	overflow-y: auto;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+}
+
 h1 {
 }
 
